# axum_layerd_architecture

./: MEMO  TREE
abs_admin/: .gitignore  MEMO  application.json5  hash_password.py  sqlite.db-shm  sqlite.db-wal
abs_admin/abs_admin_vue/: .gitignore
abs_admin/src/: main.rs
auth_login/: MEMO  hash_password.py
auth_login/axum-login-demo/: Cargo.toml  MEMO  README.md  SQLITE  USER
auth_login/axum_permissions_demo/: .MEMO.swp  Cargo.toml  MEMO
auth_login/axum_session_demo/: Cargo.toml  Cargo.toml.old
axum_sea-orm/: .env  LOG
axum_sea-orm/entity/: Cargo.toml
axum_sea-orm/migration/: Cargo.toml
axum_sea-orm/seeder/: Cargo.toml
axum_sea-orm/service/: Cargo.toml
axum_todo_app/: Cargo.toml  MEMO
axum_todo_app/_curl/: _delete.sh  _get.sh  _post.sh  _post2.sh
axum_todo_app/pg/: postgresql_compose.yml
axum_todo_app/src/: main.rs
axum_todo_app2/: Cargo.toml  MEMO  MEMO2
axum_todo_app2/_curl/: _delete_id.sh  _get.sh  _get_id.sh  _patch.sh  _post.sh  _post2.sh  _put.sh
axum_todo_app2/pg/: .env  MEMO
axum_todo_app2/src/: main.rs
realworld-axum-sqlx/: .gitignore  MEMO  REP.sh
realworld-axum-sqlx/migrations/: 2_user.sql  3_follow.sql  4_article.sql
realworld-axum-sqlx/realworld-frontend/: package.json
rusted_service/: MEMO  sqlite.db
sse_axum/: MEMO
stock-metrics/: MEMO  _get.sh  _post.sh
stock-metrics/py_tools/: _get.sh  data.csv  data.json  market_data_post.py  market_kind_post.py  (+1 more)
svelte-axum-project/: MEMO
todos-layerd/: MEMO  README.md  TREE  _allget.sh  _delete.sh  _get.sh  _patch.sh  _post.sh
tower-sessions/: Cargo.toml
(+40 files in other folders)
